# mindgaurd-full

./: .dockerignore  .gitignore  ASSESSMENT_FLOW_GUIDE.md  Dockerfile.enhanced  Dockerfile.training  FACIAL_ANALYSIS_FIXED.md  FACIAL_ANALYSIS_SETUP.md  FACIAL_ANALYSIS_SYSTEM.md  FINAL_PROJECT_REPORT.md  IMPLEMENTATION_SUMMARY.md  Makefile  PROJECT_GUIDE.md  PROJECT_SUMMARY.md  README.ENHANCED.md  README.md  REAL_FACIAL_ANALYSIS_SYSTEM.md  docker-compose.dev.yml  docker-compose.enhanced.yml  docker-compose.prod.yml  docker-compose.training.yml  start.sh  start_assessment_test.sh
backend/: .env.example  Dockerfile.dev  Dockerfile.prod  FAildockerfile  FROM python:3.dockerfile  Makefile  README.md  doc.md  fix_indentation.py  model_graphs.py  pyproject.toml  pytest.ini  requirements.txt  setup.py  simple_server.py  test.py  test_facial_analysis.py
backend/app/: main.py
backend/app/core/: patterns.py
backend/app/models/: __init__.py  checkpoint.pt  checkpoint_scaler.pkl  model.py  (+3 more)
backend/data/: dataset.csv
backend/ex/: .env.example  requirements.txt  sh.sh
backend/scripts/: download_facial_data.py  download_real_facial_data.py  evaluate_adaptive_system.py  infer_model.py  init_db.py  merge_datasets.py  prepare_training_data.py  train_audio_model.py  train_deepface_model.py  train_deepface_model_simple.py  train_facial_model.py  train_fer_model.py  train_fer_model_simple.py  train_model.py  train_model.py   train_model.py-bk  train_multimodal_model.py  train_real_fer_model.py
backend/tests/: README.md  __init__.py  conftest.py  test_recommendation_service.py
(+139 files in other folders)
