[build-system]
requires = [
    "setuptools>=42.0.0",
    "wheel",
    "cmake>=3.18",
    "numpy>=1.24.0",
]
build-backend = "setuptools.build_meta"

[project]
name = "mindguard-backend"
version = "0.1.0"
description = "MindGuard Backend Service"
requires-python = ">=3.10"

[tool.setuptools]
packages = ["app"]